keycloak-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`id.kodo.dev`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: keycloak
      port: 80
    middlewares:
      - name: keycloak-headers
  tls:
    certResolver: kododev
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: keycloak-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Forwarded-For: id.kodo.dev
